# python-project-49

./: .gitignore  Makefile  README.md  pyproject.toml
brain_games/: .flake8  cli.py  engine.py  pyproject.toml
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
